@@ -1,5 +1,7 @@
 Revision history for Perl extension Math::Clipper.
 
+  - Removed warning from integerize_coordinate_sets().
+
 1.01  Mon Oct 03 09:15:00 2011
 
   - Upgraded the Clipper library to the newest available version 4.4.4.
